@@ -1,5 +1,8 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-10-18)
+ * (Internal change) Don't use the pref object in mplayerwindow.
+
 (2007-10-17)
  * Added a 2nd patch by LoRd_MuldeR for winfileassoc.cpp.
  * Added a work-around for a problem which prevents to use the arrow keys
